# 2decarrera

./: README.md  a.out  ejercicio.lcb  ejercicio2.txt  ejercicio4.txt  prueba.cc
Arquitectura de Computadores/: Basico.lcb  Basico.rep  ejercicio1.txt  ejercicio3.txt
Arquitectura de Computadores/practica1/: ejercicio1.txt  ejercicio2.txt  ejercicio3.txt  ejercicio4.txt
Arquitectura de Computadores/practica2/: ADDV11.txt  Basico.lcb  CSR_R.txt  DJNZ.txt  Hoja Microprogramación (2).xls  Hoja MicroprogramaciónCOMPLETA.xls  ISZ_R.txt  SFZ_R.txt  SUB.txt  SUBI.txt  SUBV11.txt  repertorio_expandido.rep
Arquitectura de Computadores/practica3/: ejercicio.lcb  ejercicio.rep  ejercicio.txt
Arquitectura de Computadores/practica3_Definitiva/: ABS.txt  ADDIMM.txt  LDA.txt  LDQ.txt  ROL1_F_ACC.txt  STA.txt  practica.lcb  practica.rep  repertorio.rep
Arquitectura de Computadores/primerosEjemplos/: bucle.txt  funciones.txt  resta.txt  suma.txt
Estructuras de Datos/packet_processor/: packet_processor.cpp  packet_processor.hpp  queue_imp.hpp  slist.hpp  slist_imp.hpp  stack.hpp  stack_imp.hpp  test_packet_processor.cpp  test_queue.cpp  test_slist.cpp  test_stack.cpp
Estructuras de Datos/packet_processor/tests_packet_processor/: 00  22
Estructuras de Datos/packet_processor/tests_queue/: 02  03
Estructuras de Datos/practica1/: script_comprobar_p1.sh
Estructuras de Datos/practica1/packet_processor/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  README.md  compilar.sh  packet_processor.cpp  queue.hpp  queue_imp.hpp  slist.hpp  slist_imp.hpp
Estructuras de Datos/practica1/packet_processor/tests_queue/: 00  01  04  05
Estructuras de Datos/practica1/packet_processor/tests_slist_cursor/: 01  03  06  08
Estructuras de Datos/practica1/packet_processor/tests_slist_fold_unfold/: 00  04
Estructuras de Datos/practica1/packet_processor/tests_slist_simple/: 00  01  02
Estructuras de Datos/practica2/: script_comprobar_p2 (1).sh
Ingeniería del software/: practica2 Apuntes
Programación Orientada a Objetos/: .gitignore  Readme.md
Programación Orientada a Objetos/SIMULACRO FEB 2020/: Makefile  cpieza.cc  cpieza.h  pieza.cc  pieza.h  refpieza.cc  refpieza.h  test1  test1.cc  test2  test2.cc  test3  test3.cc  test4.cc  test5.cc  test6.cc
Programación Orientada a Objetos/p1/: a.out  guess.cc  hello-world.cc  ns.cc
Programación Orientada a Objetos/practica2/: ejecutable  person.cc  person.h  person_main.cc
Programación Orientada a Objetos/practica3/marketplace/tests/: CMakeLists.txt  person_test.cc
Programación Orientada a Objetos/practica4/marketplace/: CMakeLists.txt
Programación Orientada a Objetos/practica4/marketplace/src/: CMakeLists.txt
Programación Orientada a Objetos/practica4/marketplace/src/basket/: basket.cc  basket.h  basket_main.cc
Programación Orientada a Objetos/practica4/marketplace/src/computer/: computer.h
Programación Orientada a Objetos/practica4/marketplace/src/product/: product.cc  product.h  product_main.cc
Programación Orientada a Objetos/practica4/marketplace/tests/: CMakeLists.txt  basket_test.cc
Programación Orientada a Objetos/practica5/marketplace/src/seller/: CMakeLists.txt  seller.h
Programación Orientada a Objetos/practica5/marketplace/tests/: CMakeLists.txt  basket_test.cc  client_test.cc  computer_test.cc
Programación Orientada a Objetos/practica6/marketplace/src/app/: CMakeLists.txt  app_main.cc
Programación Orientada a Objetos/practica6/marketplace/src/client/: CMakeLists.txt  client.h
Programación Orientada a Objetos/practica6/marketplace/src/market/: CMakeLists.txt  market.cc  market.h  market_main.cc
Programación Orientada a Objetos/practica7/: CMakeLists.txt  a.out  ordena.cc  ordena2.cc  ordena3.cc  plantila.cc  plantilla2.cc
Programación Orientada a Objetos/practica7/tests/: CMakeLists.txt  Makefile  contador_unittest.cc
Sistemas Operativos/: demo1  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.c  demo8.c  while-wait-waitpid.c
rbtrees/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  README.md  rbtree.hpp  rbtree_imp.hpp  test_bstree.cpp  test_rbtree.cpp
rbtrees/tests_bstnode/: 00  01  02  03
rbtrees/tests_bstree/: 00  01  02  03  04  05  06  07  08  09  10  11
rbtrees/tests_bstree_perfectly_balanced/: 50  51
rbtrees/tests_rbtnode/: 00  01  02  03
rbtrees/tests_rbtree_inserting/: 00  01  02  03  04  05  06  08  09  10  11
rbtrees/tests_rbtree_removing/: 00  01  02  03  06  07  08  09  10  11  12  13  14
sistemas operativos/: .gitignore  a.out  ejercicio.c  ejercicio1ExamenAlberto.c  ejercicioStruct.c  hola.c  productoresConsumidores.c  prueba.c
sistemas operativos/ejemplo1Procesos/: ejercicio_base.c
sistemas operativos/ejemplo2Procesos/: ejercicio  ejercicio.c
sistemas operativos/ejercicioExamen/: ejercicio  ejercicio.c
sistemas operativos/examenFebrero2022/: ejercicio1.c
sistemas operativos/hilos/: a.out  ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  makefile
sistemas operativos/practica1/: ejercicio  ejercicio1.c
sistemas operativos/practicaExamen2/: ejercicio  ejercicio.c  hola.txt
sistemas operativos/previaExamen/: a.out  ejecicioExamen.c  ejercicio.c  ejercicio2.c  ejercicioExamenPirata.c  factorial
sistemas operativos/procesos/: ejercicio
sistemas operativos/semaforos/: a.out  ejercicio.c  ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  makefile
sistemas operativos/semaforosGenerales/: a.out  ejercicio1.c  ejercicio2.c  ejercicio3.c
sistemas operativos/simulacroEnero/: a.out  ejercicio1.c  ejercicioProcesosSeñales.c  ejercicioSerrano.c  ejercicioStruct.c  ejercicioSumadores.c  factorial.c
(+270 files in other folders)
