# GTest include code for fetch content over the internet 
include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        release-1.11.0
)
FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)
# End GTest include code 

# Testing contador library
add_executable(contador_unittest contador_unittest.cc)
target_link_libraries(contador_unittest
PRIVATE GTest::GTest contador)
add_test(contador_gtests contador_unittest)


